--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <title>Hello world</title>
 </head>
 <body>
+   <link rel="manifest" href="/manifest.json">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(["init", {
+      appId: "YOUR_APP_ID",
+      autoRegister: false,
+      notifyButton: {
+        enable: true /* Set to false to hide */
+      }
+    }]);
+  </script>
 
 <h1>Hello World</h1>
 
