--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
-      appId: "YOUR_APP_ID",
+      appId: "9dcefb38-69cf-4aa1-b1c6-9a6dc2d853b5",
       autoRegister: false,
       notifyButton: {
         enable: true /* Set to false to hide */
